--- a/Test/TEST-1.ipynb
+++ b/Test/TEST-1.ipynb
@@ -2,85 +2,371 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>MANDT</th>\n",
+       "      <th>MATNR</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>LGNUM</th>\n",
+       "      <th>LGTYP</th>\n",
+       "      <th>LVORM</th>\n",
+       "      <th>LGPLA</th>\n",
+       "      <th>LPMAX</th>\n",
+       "      <th>Unnamed: 12</th>\n",
+       "      <th>Unnamed: 13</th>\n",
+       "      <th>LPMIN</th>\n",
+       "      <th>Unnamed: 15</th>\n",
+       "      <th>MAMNG</th>\n",
+       "      <th>NSMNG</th>\n",
+       "      <th>KOBER</th>\n",
+       "      <th>RDMNG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>10081810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>SN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>165.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>152.999</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>10081810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>TN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.249</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>10081878.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>SN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>165.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>152.999</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>10081878.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>TN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.249</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2557</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>50063231.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>TN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R-12-01-61</td>\n",
+       "      <td>40.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.999</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2558</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>50063261.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>SN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R05-15</td>\n",
+       "      <td>230.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>199.999</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2559</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>50063261.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>TN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R-12-01-62</td>\n",
+       "      <td>40.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.999</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2560</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>50063290.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>SN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R04-22</td>\n",
+       "      <td>230.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>199.999</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2561</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>50063290.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DE2</td>\n",
+       "      <td>TN1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R-12-01-14</td>\n",
+       "      <td>40.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.999</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2562 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0  MANDT       MATNR  Unnamed: 3  Unnamed: 4  Unnamed: 5  \\\n",
+       "0            NaN    NaN         NaN         NaN         NaN         NaN   \n",
+       "1            NaN  170.0  10081810.0         NaN         NaN         NaN   \n",
+       "2            NaN  170.0  10081810.0         NaN         NaN         NaN   \n",
+       "3            NaN  170.0  10081878.0         NaN         NaN         NaN   \n",
+       "4            NaN  170.0  10081878.0         NaN         NaN         NaN   \n",
+       "...          ...    ...         ...         ...         ...         ...   \n",
+       "2557         NaN  170.0  50063231.0         NaN         NaN         NaN   \n",
+       "2558         NaN  170.0  50063261.0         NaN         NaN         NaN   \n",
+       "2559         NaN  170.0  50063261.0         NaN         NaN         NaN   \n",
+       "2560         NaN  170.0  50063290.0         NaN         NaN         NaN   \n",
+       "2561         NaN  170.0  50063290.0         NaN         NaN         NaN   \n",
+       "\n",
+       "      Unnamed: 6 LGNUM LGTYP  LVORM       LGPLA   LPMAX  Unnamed: 12  \\\n",
+       "0            NaN   NaN   NaN    NaN         NaN     NaN          NaN   \n",
+       "1            NaN   DE2   SN1    NaN         NaN  165.75          NaN   \n",
+       "2            NaN   DE2   TN1    NaN         NaN   17.00          NaN   \n",
+       "3            NaN   DE2   SN1    NaN         NaN  165.75          NaN   \n",
+       "4            NaN   DE2   TN1    NaN         NaN   17.00          NaN   \n",
+       "...          ...   ...   ...    ...         ...     ...          ...   \n",
+       "2557         NaN   DE2   TN1    NaN  R-12-01-61   40.00          NaN   \n",
+       "2558         NaN   DE2   SN1    NaN      R05-15  230.00          NaN   \n",
+       "2559         NaN   DE2   TN1    NaN  R-12-01-62   40.00          NaN   \n",
+       "2560         NaN   DE2   SN1    NaN      R04-22  230.00          NaN   \n",
+       "2561         NaN   DE2   TN1    NaN  R-12-01-14   40.00          NaN   \n",
+       "\n",
+       "      Unnamed: 13  LPMIN  Unnamed: 15    MAMNG  NSMNG  KOBER  RDMNG  \n",
+       "0             NaN    NaN          NaN      NaN    NaN    NaN    NaN  \n",
+       "1             NaN  153.0          NaN  152.999   4.25    NaN   4.25  \n",
+       "2             NaN    8.5          NaN    4.249   8.50    NaN   0.17  \n",
+       "3             NaN  153.0          NaN  152.999   4.25    NaN   4.25  \n",
+       "4             NaN    8.5          NaN    4.249   8.50    NaN   0.17  \n",
+       "...           ...    ...          ...      ...    ...    ...    ...  \n",
+       "2557          NaN   20.0          NaN    9.999  20.00    NaN   1.00  \n",
+       "2558          NaN  200.0          NaN  199.999  10.00    NaN  10.00  \n",
+       "2559          NaN   20.0          NaN    9.999  20.00    NaN   1.00  \n",
+       "2560          NaN  200.0          NaN  199.999  10.00    NaN  10.00  \n",
+       "2561          NaN   20.0          NaN    9.999  20.00    NaN   1.00  \n",
+       "\n",
+       "[2562 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from dataclasses import dataclass\n",
-    "from typing import Dict, Any, Iterable\n",
-    "from pandas import DataFrame\n",
-    "from sqlalchemy import create_engine, inspect\n",
-    "import urllib\n",
-    "\n",
-    "@dataclass(frozen=True)\n",
-    "class ConnectionSettings:\n",
-    "    \"\"\"Connection Settings.\"\"\"\n",
-    "    server: str\n",
-    "    database: str\n",
-    "    username: str\n",
-    "    password: str\n",
-    "    driver: str = '{ODBC Driver 18 for SQL Server}'\n",
-    "    timeout: int = 30\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
-    "class AzureDbConnection:\n",
-    "    \"\"\"\n",
-    "    Azure SQL database connection.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, conn_settings: ConnectionSettings, echo: bool = False) -> None:\n",
-    "        conn_params = urllib.parse.quote_plus(\n",
-    "            'Driver=%s;' % conn_settings.driver +\n",
-    "            'Server=tcp:%s.database.windows.net,1433;' % conn_settings.server +\n",
-    "            'Database=%s;' % conn_settings.database +\n",
-    "            'Uid=%s;' % conn_settings.username +\n",
-    "            'Pwd=%s;' % conn_settings.password +\n",
-    "            'Encrypt=yes;' +\n",
-    "            'TrustServerCertificate=no;' +\n",
-    "            'Connection Timeout=%s;' % conn_settings.timeout\n",
-    "        )\n",
-    "        conn_string = f'mssql+pyodbc:///?odbc_connect={conn_params}'\n",
+    "def datenLaden():\n",
+    "    # load data columnsName in row 4\n",
     "\n",
-    "        self.db = create_engine(conn_string, echo=echo)\n",
-    "\n",
-    "    def connect(self) -> None:\n",
-    "        \"\"\"Estimate connection.\"\"\"\n",
-    "        self.conn = self.db.connect()\n",
-    "\n",
-    "    def get_tables(self) -> Iterable[str]:\n",
-    "        \"\"\"Get list of tables.\"\"\"\n",
-    "        inspector = inspect(self.db)\n",
-    "        return [t for t in inspector.get_table_names()]\n",
-    "\n",
-    "    def dispose(self) -> None:\n",
-    "        \"\"\"Dispose opened connections.\"\"\"\n",
-    "        self.conn.close()\n",
-    "        self.db.dispose()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import urllib\n",
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "driver = \"{ODBC Driver 17 for SQL Server}\"\n",
-    "server = \"batsql-pd-ne-cmes-dev-10.database.windows.net\"\n",
-    "database = \"batsdb-pd-ne-dev-reporting_SuperDepot\"\n",
-    "user = \"batedp-cmes-dev-reportinguser\"\n",
-    "password = \"b2.5v^H!IKjetuXMVNvW\"\n",
-    "\n",
-    "conn = f\"\"\"Driver={driver};Server=tcp:{server},1433;Database={database};\n",
-    "Uid={user};Pwd={password};Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;\"\"\"\n",
-    "\n",
-    "params = urllib.parse.quote_plus(conn)\n",
-    "conn_str = 'mssql+pyodbc:///?autocommit=true&odbc_connect={}'.format(params)\n",
-    "\n",
-    "engine = create_engine(conn_str, echo=True)\n",
-    "res = engine.execute(\"SELECT * FROM dbo.[SuperDepot$Item]\")\n",
-    "#engine.execute(\"SELECT * FROM dbo.[SuperDepot$Item]\")"
+    "    df = pd.read_excel(\"MLGT.xlsx\",header=3) \n",
+    "    return df\n",
+    "df= datenLaden()\n",
+    "#df.fillna(0)\n",
+    "df"
    ]
   }
  ],
