--- a/Data_Class/Untitled-1.ipynb
+++ b/Data_Class/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -246,119 +246,119 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34645</th>\n",
-       "      <td>3202260170</td>\n",
-       "      <td>2022-12-06 14:22:39.128433+00:00</td>\n",
+       "      <th>34607</th>\n",
+       "      <td>3202260410</td>\n",
+       "      <td>2022-12-07 09:37:12.205793+00:00</td>\n",
        "      <td>Service</td>\n",
-       "      <td>2022-12-06 14:22:47.505747+00:00</td>\n",
+       "      <td>2022-12-07 09:37:12.670318+00:00</td>\n",
        "      <td>Service</td>\n",
        "      <td>OrderInformationSent</td>\n",
        "      <td>1</td>\n",
-       "      <td>2022-12-06 14:22:39.128432+00:00</td>\n",
+       "      <td>2022-12-07 09:37:12.205791+00:00</td>\n",
        "      <td>KNSTR</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>4399901095458</td>\n",
-       "      <td>4010379000002</td>\n",
-       "      <td>True</td>\n",
-       "      <td>DTV</td>\n",
-       "      <td>Huissel Tabak GmbH</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34608</th>\n",
+       "      <td>3202260411</td>\n",
+       "      <td>2022-12-07 09:37:18.280633+00:00</td>\n",
+       "      <td>Service</td>\n",
+       "      <td>2022-12-07 10:52:36.350442+00:00</td>\n",
+       "      <td>Service</td>\n",
+       "      <td>OrderInformationSent</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-12-07 09:37:18.280632+00:00</td>\n",
+       "      <td>KNLEJ</td>\n",
        "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34609</th>\n",
+       "      <td>3202260412</td>\n",
+       "      <td>2022-12-07 09:42:46.028986+00:00</td>\n",
+       "      <td>Service</td>\n",
+       "      <td>2022-12-07 11:00:48.834824+00:00</td>\n",
+       "      <td>Service</td>\n",
+       "      <td>OrderInformationSent</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-12-07 09:42:46.028985+00:00</td>\n",
+       "      <td>KNLEJ</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34610</th>\n",
+       "      <td>3202260413</td>\n",
+       "      <td>2022-12-07 09:42:39.699037+00:00</td>\n",
+       "      <td>Service</td>\n",
+       "      <td>2022-12-07 09:42:40.318522+00:00</td>\n",
+       "      <td>Service</td>\n",
+       "      <td>OrderInformationSent</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-12-07 09:42:39.699036+00:00</td>\n",
+       "      <td>KNSTR</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34646</th>\n",
-       "      <td>3202260170</td>\n",
-       "      <td>2022-12-06 14:22:39.128433+00:00</td>\n",
+       "      <th>34611</th>\n",
+       "      <td>3202260414</td>\n",
+       "      <td>2022-12-07 09:37:21.669762+00:00</td>\n",
        "      <td>Service</td>\n",
-       "      <td>2022-12-06 14:22:47.505747+00:00</td>\n",
-       "      <td>Service</td>\n",
-       "      <td>OrderInformationSent</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-12-06 14:22:39.128432+00:00</td>\n",
-       "      <td>KNSTR</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4399901095458</td>\n",
-       "      <td>4010379000002</td>\n",
-       "      <td>True</td>\n",
-       "      <td>DTV</td>\n",
-       "      <td>Huissel Tabak GmbH</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34647</th>\n",
-       "      <td>3202260170</td>\n",
-       "      <td>2022-12-06 14:22:39.128433+00:00</td>\n",
-       "      <td>Service</td>\n",
-       "      <td>2022-12-06 14:22:47.505747+00:00</td>\n",
+       "      <td>2022-12-07 09:37:22.333987+00:00</td>\n",
        "      <td>Service</td>\n",
        "      <td>OrderInformationSent</td>\n",
        "      <td>1</td>\n",
-       "      <td>2022-12-06 14:22:39.128432+00:00</td>\n",
+       "      <td>2022-12-07 09:37:21.669761+00:00</td>\n",
        "      <td>KNSTR</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>4399901095458</td>\n",
-       "      <td>4010379000002</td>\n",
+       "      <td>4008815000006</td>\n",
+       "      <td>4051400000004</td>\n",
        "      <td>True</td>\n",
-       "      <td>DTV</td>\n",
-       "      <td>Huissel Tabak GmbH</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34648</th>\n",
-       "      <td>3202260170</td>\n",
-       "      <td>2022-12-06 14:22:39.128433+00:00</td>\n",
-       "      <td>Service</td>\n",
-       "      <td>2022-12-06 14:22:47.505747+00:00</td>\n",
-       "      <td>Service</td>\n",
-       "      <td>OrderInformationSent</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-12-06 14:22:39.128432+00:00</td>\n",
-       "      <td>KNSTR</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4399901095458</td>\n",
-       "      <td>4010379000002</td>\n",
-       "      <td>True</td>\n",
-       "      <td>DTV</td>\n",
-       "      <td>Huissel Tabak GmbH</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34649</th>\n",
-       "      <td>3202260170</td>\n",
-       "      <td>2022-12-06 14:22:39.128433+00:00</td>\n",
-       "      <td>Service</td>\n",
-       "      <td>2022-12-06 14:22:47.505747+00:00</td>\n",
-       "      <td>Service</td>\n",
-       "      <td>OrderInformationSent</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-12-06 14:22:39.128432+00:00</td>\n",
-       "      <td>KNSTR</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4399901095458</td>\n",
-       "      <td>4010379000002</td>\n",
-       "      <td>True</td>\n",
-       "      <td>DTV</td>\n",
-       "      <td>Huissel Tabak GmbH</td>\n",
+       "      <td>Lekkerland</td>\n",
+       "      <td>Lekkerland Deutschland GmbH&amp;Co.KG</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>1.0</td>\n",
@@ -367,7 +367,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>34423 rows × 54 columns</p>\n",
+       "<p>34388 rows × 54 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -378,11 +378,11 @@
        "4         3201771796 2022-11-21 07:23:28.451779+00:00   Service   \n",
        "5         3201771796 2022-11-21 07:23:28.451779+00:00   Service   \n",
        "...              ...                              ...       ...   \n",
-       "34645     3202260170 2022-12-06 14:22:39.128433+00:00   Service   \n",
-       "34646     3202260170 2022-12-06 14:22:39.128433+00:00   Service   \n",
-       "34647     3202260170 2022-12-06 14:22:39.128433+00:00   Service   \n",
-       "34648     3202260170 2022-12-06 14:22:39.128433+00:00   Service   \n",
-       "34649     3202260170 2022-12-06 14:22:39.128433+00:00   Service   \n",
+       "34607     3202260410 2022-12-07 09:37:12.205793+00:00   Service   \n",
+       "34608     3202260411 2022-12-07 09:37:18.280633+00:00   Service   \n",
+       "34609     3202260412 2022-12-07 09:42:46.028986+00:00   Service   \n",
+       "34610     3202260413 2022-12-07 09:42:39.699037+00:00   Service   \n",
+       "34611     3202260414 2022-12-07 09:37:21.669762+00:00   Service   \n",
        "\n",
        "                      UpdatedTimestamp                             UpdatedBy  \\\n",
        "1     2022-11-21 13:47:54.954687+00:00  8ff4036e-5584-40b1-953e-01d4ecbe5eb3   \n",
@@ -391,11 +391,11 @@
        "4     2022-11-21 13:47:54.954687+00:00  8ff4036e-5584-40b1-953e-01d4ecbe5eb3   \n",
        "5     2022-11-21 13:47:54.954687+00:00  8ff4036e-5584-40b1-953e-01d4ecbe5eb3   \n",
        "...                                ...                                   ...   \n",
-       "34645 2022-12-06 14:22:47.505747+00:00                               Service   \n",
-       "34646 2022-12-06 14:22:47.505747+00:00                               Service   \n",
-       "34647 2022-12-06 14:22:47.505747+00:00                               Service   \n",
-       "34648 2022-12-06 14:22:47.505747+00:00                               Service   \n",
-       "34649 2022-12-06 14:22:47.505747+00:00                               Service   \n",
+       "34607 2022-12-07 09:37:12.670318+00:00                               Service   \n",
+       "34608 2022-12-07 10:52:36.350442+00:00                               Service   \n",
+       "34609 2022-12-07 11:00:48.834824+00:00                               Service   \n",
+       "34610 2022-12-07 09:42:40.318522+00:00                               Service   \n",
+       "34611 2022-12-07 09:37:22.333987+00:00                               Service   \n",
        "\n",
        "                     Status  NiceLabelTransmissionState_Status  \\\n",
        "1       SSCCInformationSent                                  1   \n",
@@ -404,11 +404,11 @@
        "4       SSCCInformationSent                                  1   \n",
        "5       SSCCInformationSent                                  1   \n",
        "...                     ...                                ...   \n",
-       "34645  OrderInformationSent                                  1   \n",
-       "34646  OrderInformationSent                                  1   \n",
-       "34647  OrderInformationSent                                  1   \n",
-       "34648  OrderInformationSent                                  1   \n",
-       "34649  OrderInformationSent                                  1   \n",
+       "34607  OrderInformationSent                                  1   \n",
+       "34608  OrderInformationSent                                  1   \n",
+       "34609  OrderInformationSent                                  1   \n",
+       "34610  OrderInformationSent                                  1   \n",
+       "34611  OrderInformationSent                                  1   \n",
        "\n",
        "      NiceLabelTransmissionState_TimeStamp DeliveryDepot  IsReturnDelivery  \\\n",
        "1         2022-11-21 07:23:28.451777+00:00         KNSTR             False   \n",
@@ -417,11 +417,11 @@
        "4         2022-11-21 07:23:28.451777+00:00         KNSTR             False   \n",
        "5         2022-11-21 07:23:28.451777+00:00         KNSTR             False   \n",
        "...                                    ...           ...               ...   \n",
-       "34645     2022-12-06 14:22:39.128432+00:00         KNSTR             False   \n",
-       "34646     2022-12-06 14:22:39.128432+00:00         KNSTR             False   \n",
-       "34647     2022-12-06 14:22:39.128432+00:00         KNSTR             False   \n",
-       "34648     2022-12-06 14:22:39.128432+00:00         KNSTR             False   \n",
-       "34649     2022-12-06 14:22:39.128432+00:00         KNSTR             False   \n",
+       "34607     2022-12-07 09:37:12.205791+00:00         KNSTR             False   \n",
+       "34608     2022-12-07 09:37:18.280632+00:00         KNLEJ             False   \n",
+       "34609     2022-12-07 09:42:46.028985+00:00         KNLEJ             False   \n",
+       "34610     2022-12-07 09:42:39.699036+00:00         KNSTR             False   \n",
+       "34611     2022-12-07 09:37:21.669761+00:00         KNSTR             False   \n",
        "\n",
        "       ...       BuyerGLN    CustomerGLN SendHierarchy  CustomerGLNName  \\\n",
        "1      ...  4008815000006  4051400000004          True       Lekkerland   \n",
@@ -430,11 +430,11 @@
        "4      ...  4008815000006  4051400000004          True       Lekkerland   \n",
        "5      ...  4008815000006  4051400000004          True       Lekkerland   \n",
        "...    ...            ...            ...           ...              ...   \n",
-       "34645  ...  4399901095458  4010379000002          True              DTV   \n",
-       "34646  ...  4399901095458  4010379000002          True              DTV   \n",
-       "34647  ...  4399901095458  4010379000002          True              DTV   \n",
-       "34648  ...  4399901095458  4010379000002          True              DTV   \n",
-       "34649  ...  4399901095458  4010379000002          True              DTV   \n",
+       "34607  ...              0              0             0                0   \n",
+       "34608  ...              0              0             0                0   \n",
+       "34609  ...              0              0             0                0   \n",
+       "34610  ...              0              0             0                0   \n",
+       "34611  ...  4008815000006  4051400000004          True       Lekkerland   \n",
        "\n",
        "                             PartnerName UseOuterGTINAndQuantity  \\\n",
        "1      Lekkerland Deutschland GmbH&Co.KG                    True   \n",
@@ -443,11 +443,11 @@
        "4      Lekkerland Deutschland GmbH&Co.KG                    True   \n",
        "5      Lekkerland Deutschland GmbH&Co.KG                    True   \n",
        "...                                  ...                     ...   \n",
-       "34645                 Huissel Tabak GmbH                    True   \n",
-       "34646                 Huissel Tabak GmbH                    True   \n",
-       "34647                 Huissel Tabak GmbH                    True   \n",
-       "34648                 Huissel Tabak GmbH                    True   \n",
-       "34649                 Huissel Tabak GmbH                    True   \n",
+       "34607                                  0                       0   \n",
+       "34608                                  0                       0   \n",
+       "34609                                  0                       0   \n",
+       "34610                                  0                       0   \n",
+       "34611  Lekkerland Deutschland GmbH&Co.KG                    True   \n",
        "\n",
        "      DelayedDESADVSending PicksGesamt PicksFertig PicksOffen  \n",
        "1                    False         1.0         1.0        0.0  \n",
@@ -456,16 +456,16 @@
        "4                    False         5.0         5.0        0.0  \n",
        "5                    False         1.0         1.0        0.0  \n",
        "...                    ...         ...         ...        ...  \n",
-       "34645                False         1.0         0.0        1.0  \n",
-       "34646                False         1.0         0.0        1.0  \n",
-       "34647                False         1.0         0.0        1.0  \n",
-       "34648                False         1.0         0.0        1.0  \n",
-       "34649                False         1.0         0.0        1.0  \n",
+       "34607                    0        20.0         0.0       20.0  \n",
+       "34608                    0         2.0         2.0        0.0  \n",
+       "34609                    0         5.0         5.0        0.0  \n",
+       "34610                    0         1.0         0.0        1.0  \n",
+       "34611                False         1.0         0.0        1.0  \n",
        "\n",
-       "[34423 rows x 54 columns]"
+       "[34388 rows x 54 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
